<resources>
    <string name="app_name">Pet Care</string>
    <string name="app_login">Login</string>

    <string name="login.login">Entrar</string>
    <string name="login.signup">Cadastre-se</string>
    <string name="login.email">E-mail</string>
    <string name="login.password">Senha</string>

    <string name="login.invalid_email">E-mail inválido.</string>
    <string name="login.invalid_password">Senha inválida.</string>
    <string name="login.invalid_login">Não foi possível efetuar seu login no PetSitter. Verifique seu e-mail e sua senha</string>
    <string name="login.dialog_message">Efetuando login...</string>

    <string name="gcm_sender_id">236314577065</string>

    <!-- Tabs Titles -->
    <string name="tabs.pet_sitters">Pet Sitters</string>
    <string name="tabs_reservations">Minhas Reservas</string>
    <string name="tabs_new_jobs">Novos</string>
    <string name="tabs_new_jobs_feminine">Novas</string>
    <string name="tabs_next_jobs">Próximos</string>
    <string name="tabs_next_jobs_feminine">Próximas</string>
    <string name="tabs_current_jobs">Em Andamento</string>
    <string name="tabs_finished_jobs">Finalizados</string>
    <string name="tabs_finished_jobs_feminine">Finalizadas</string>
    <string name="tab_information">Informações</string>
    <string name="tab_rate">Avaliações</string>

    <!-- Sitters Fragment -->
    <string name="search_instruction">Qual seu pet?</string>
    <string name="search">Pesquisar</string>
    <string name="search_no_animals_selected">Você deve selecionar pelo um animal para a pesquisa de Pet Sitters.</string>

    <!-- Search Results -->
    <string name="search_result_title">Resultados da busca</string>
    <string name="search_searching">Pesquisando Pet Sitters...</string>

    <!--  Sitter Profile -->
    <string name="sitter_profile_about_me">Sobre mim</string>
    <string name="sitter_profile_pets">Pets que cuido</string>

    <!-- Job Request -->
    <string name="job_request_title">Solicitação de Pet Sitter</string>
    <string name="job_request_date_start">Data Início</string>
    <string name="job_request_date_final">Data Fim</string>
    <string name="job_request_validation">Por favor, preencha as datas e horários das visitas.</string>

    <!-- Job Status -->
    <string name="new_job">Novo Trabalho</string>
    <string name="next_job">Próximo Trabalho</string>
    <string name="current_job">Trabalho Atual</string>
    <string name="finished_job">Trabalho Finalizado</string>

    <!-- Common Actions -->
    <string name="actions.save">Salvar</string>
    <string name="job_request_time_start">Hora Início</string>
    <string name="job_request_time_final">Hora Fim</string>
    <string name="actions.add">Adicionar</string>
    <string name="reject">RECUSAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="ok">OK</string>

    <!-- Logout -->
    <string name="action_logout">Sair</string>
    <string name="logout_dialog_message">Saindo...</string>

    <!-- Job List -->
    <string name="beginning">Início: </string>

    <!-- Job Details -->
    <string name="job_details_reject">Recusar</string>
    <string name="job_details_accept">Aceitar</string>
    <string name="job_accepted_message">"Parabéns! Seu novo trabalho iniciará dia "</string>
    <string name="job_rejected_message">Recusar Solicitação de Pet Sitter?</string>

    <!-- Reservation Status -->
    <string name="reservation_list_new">Novas Reservas</string>
    <string name="reservation_list_next">Próximas Reservas</string>
    <string name="reservation_list_current">Reservas Atuals</string>
    <string name="reservation_list_finished">Reservas Finalizadas</string>

    <!-- Job Rate -->
    <string name="rate_job_title">Avaliação do Pet Sitter</string>
    <string name="action_rates">Minhas Avaliações</string>
    <string name="my_rates">Minhas Avaliações</string>
    <string name="my_rate">Minha Avaliação</string>
    <string name="hint_reply_rate">Comente sua avaliação</string>
    <string name="welcome">Bem-vindo ao Pet Care</string>
    <string name="you_are">Você é...</string>
    <string name="owner">Dono de pet</string>
    <string name="pet_sitter">Pet sitter</string>
    <string name="register">Cadastrar</string>
    <string name="fill_all_fields">Por favor, preencha todos os campos antes de continuar.</string>
    <string name="where_are_you">Onde voce mora?</string>
    <string name="failed_get_location">Não foi possível buscar sua localização atual.</string>
    <string name="search_for_cep">Pesquisando seu CEP...</string>
    <string name="actions.next">Próximo</string>
    <string name="choose_your_photo">Escolha sua foto</string>
    <string name="daily_summaries">Resumos diários</string>
    <string name="add_comment">Adicione um comentário</string>
    <string name="send_daily_summary">Enviar resumo diário</string>
    <string name="actions.send">Enviar</string>
    <string name="your_pets">Seus pets</string>
    <string name="actions.add_pet">Adicionar Pet</string>
    <string name="register_pet">Cadastrar pet</string>
    <string name="saving_registry">Salvando cadastro...</string>
    <string name="actions.finish">Concluir Cadastro</string>
    <string name="which_pets_do_you_care">Quais pets você cuida?</string>
    <string name="registry_no_animals_selected">Você deve selecionar pelo menos um animal para finalizar seu cadastro.</string>
    <string name="write_about_you">Escreva sobre você</string>
    <string name="actions.add_remove">Adicionar/Remover</string>
    <string name="new_reservation">Nova reserva</string>
    <string name="next_reservation">Próxima reserva</string>
    <string name="current_reservation">Reserva atual</string>
    <string name="finished_reservation">Reserva finalizada</string>
    <string name="action_my_pets">Meus pets</string>
    <string name="saving_pet_dialog">Salvando seu pet.</string>

    <!-- Search animal names -->
    <string-array name="animal_names">
        <item>Cão</item>
        <item>Gato</item>
        <item>Tartaruga</item>
        <item>Peixe</item>
        <item>Pássaro</item>
        <item>Coelho</item>
        <item>Hamster</item>
        <item>Porquinho da Índia</item>
    </string-array>

    <!-- Search animal icons -->
    <string-array name="animal_icons">
        <item>dog</item>
        <item>cat</item>
        <item>turtle</item>
        <item>fish</item>
        <item>bird</item>
        <item>rabbit</item>
        <item>hamster</item>
        <item>pig</item>
    </string-array>
</resources>
